syntax = "proto3";

package transaction;

option go_package = "internal/grpc/transactionpb;transactionpb";

message GetAllTransactionsRequest {}

message TransactionItem {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string company = 4;
  string documents = 5;
  string linkToIndividualEntrepreneurship = 6;
}

message GetAllTransactionsResponse {
  repeated TransactionItem transactions = 1;
}

service TransactionService {
  rpc GetAllTransactions(GetAllTransactionsRequest) returns (GetAllTransactionsResponse);
}
